--- a/cy-GB/meta.yml
+++ b/cy-GB/meta.yml
@@ -7,7 +7,7 @@ ingredient: false
 copyedit: false
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
 title: Osgoi'r bêl
-description: "Creu gêm platfform lle mae rhaid i ti osgoi'r bêl i gyrraedd diwedd y lefel."
+description: Creu gêm platfform lle mae rhaid i ti osgoi'r bêl i gyrraedd diwedd y lefel.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: ''
 technologies: scratch
