--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,8 +7,7 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Dodgeball
-description: Create a platform game, in which you have to dodge the moving balls and
-reach the end of the level.
+description: Create a platform game, in which you have to dodge the moving balls and reach the end of the level.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
