--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Treffball
 description: In diesem Projekt lernst Du, wie Du ein Plattform-Spiel erstellst, in dem Du sich bewegenden Bällen ausweichen und das Ende des Levels erreichen musst.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: ''
+interests: games
 technologies: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+hardware: ''
+software: scratch
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Einführung
 - title: Bewegung der Spielfigur
 - title: 'Herausforderung: Das Level abschließen'
@@ -24,4 +28,3 @@ steps:
 - title: 'Herausforderung: Mehr Hindernisse'
 - title: 'Herausforderung: Verbesserte Schwerkraft'
 - title: 'Herausforderung: Mehr Leben'
-
