--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Alón Prisionero
 description: Crea un juego de plataforma en el que tengas que esquivar pelotas y llegar al final del nivel.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: ''
+interests: games
 technologies: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+hardware: ''
+software: scratch
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Introducción
 - title: Movimientos del personaje
 - title: 'Reto: Acabar el nivel'
@@ -24,4 +28,3 @@ steps:
 - title: 'Reto: Más obstáculos'
 - title: 'Reto: Gravedad mejorada'
 - title: 'Reto: Más vidas'
-
