--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Ballon chasseur
 description: Apprends à programmer ton propre jeu de plateforme!
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: ''
+interests: games
 technologies: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+hardware: ''
+software: scratch
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Introduction
 - title: Mouvement du personnage
 - title: 'Défi : Achèvement du niveau'
@@ -24,4 +28,3 @@ steps:
 - title: "Défi : Plus d'obstacles"
 - title: 'Défi : gravité améliorée'
 - title: 'Défi : Plus de vies'
-
