--- a/it-IT/meta.yml
+++ b/it-IT/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Dodgeball
 description: Crea un gioco a piattaforme in cui dovrai schivare le palle in movimento e raggiungere la fine del livello.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: ''
+interests: games
 technologies: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+hardware: ''
+software: scratch
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Introduzione
 - title: Movimento del personaggio
 - title: 'Sfida: Completare il livello'
@@ -24,4 +28,3 @@ steps:
 - title: 'Sfida: Altri ostacoli'
 - title: 'Sfida: Salto migliorato'
 - title: 'Sfida: Altre vite'
-
