--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,7 +19,7 @@ last_tested: 2017-01-01
 steps: 
 - title: Introduction
 - title: Character movement
-- title: 'Challenge: Completing the level'
+- title: "Challenge: Completing the level"
   challenge: true
 - title: Gravity and jumping
 - title: 'Challenge: Improved jumping'
