--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,19 +1,10 @@
----
 hero_image: images/banner.png
-theme: yellow
-duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Dodgeball
 description: Create a platform game, in which you have to dodge the moving balls and reach the end of the level.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
 version: 3
 last_tested: 2017-01-01
 steps: 
@@ -26,6 +17,7 @@ steps:
   challenge: true
 - title: Dodging balls
 - title: 'Challenge: Random balls'
+  challenge: true
 - title: Lasers!
 - title: 'Challenge: More obstacles'
 - title: 'Challenge: Improved gravity'
