--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,25 +3,25 @@ listed: true
 ingredient: false
 copyedit: false
 title: Dodgeball
-description: Create a platform game, in which you have to dodge the moving balls and reach the end of the level.
+description: Create a platform game in which you dodge moving balls to reach the end of the level
 version: 4.0.0
 last_tested: 2018-10-10
 steps: 
 - title: Introduction
 - title: Character movement
-- title: "Challenge: Completing the level"
+- title: "Challenge: completing the level"
   challenge: true
 - title: Gravity and jumping
-- title: 'Challenge: Improved jumping'
+- title: 'Challenge: improved jumping'
   challenge: true
 - title: Dodging balls
-- title: 'Challenge: Random balls'
+- title: 'Challenge: random balls'
   challenge: true
 - title: Lasers!
-- title: 'Challenge: More obstacles'
+- title: 'Challenge: more obstacles'
   challenge: true
-- title: 'Challenge: Improved gravity'
+- title: 'Challenge: improved gravity'
   challenge: true
-- title: 'Challenge: More lives'
+- title: 'Challenge: more lives'
   challenge: true
 - title: What next?
