--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -1,30 +1,28 @@
 ---
-hero_image: images/banner.png
-theme: yellow
-duration: 2
+hero_image: afbeeldingen/banner.png
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Trefbal
-description: Maak een platformspel, waarin je de bewegende ballen moet ontwijken en het level moet halen.
-original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
+description: Maak een platformspel, waarin je de bewegende ballen moet ontwijken en het level moet halen
+version: 4.0.0
+last_tested: 2018-10-10
 steps:
   - title: Inleiding
   - title: Voortbeweging personage
-  - title: 'Uitdaging: het level halen'
+  - title: "Uitdaging: het level halen"
+    challenge: true
   - title: Zwaartekracht en springen
   - title: 'Uitdaging: beter springen'
+    challenge: true
   - title: Trefballen
   - title: 'Uitdaging: willekeurige ballen'
+    challenge: true
   - title: Lasers!
-  - title: 'Uitdaging: meer hindernissen'
+  - title: 'Uitdaging: meer obstakels'
+    challenge: true
   - title: 'Uitdaging: verbeterde zwaartekracht'
+    challenge: true
   - title: 'Uitdaging: meer levens'
+    challenge: true
+  - title: Wat nu?
