--- a/cy-GB/meta.yml
+++ b/cy-GB/meta.yml
@@ -1,30 +1,28 @@
 ---
 hero_image: images/banner.png
-theme: yellow
-duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Osgoi'r bêl
-description: Creu gêm platfform lle mae rhaid i ti osgoi'r bêl i gyrraedd diwedd y lefel.
-original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
-steps: 
-- title: Cyflwyniad
-- title: Symudiad y Cymeriad
-- title: "Her: Cwblhau'r lefel"
-- title: Disgyrchiant a neidio
-- title: "Her: Gwella'r neidio"
-- title: Osgoi peli
-- title: 'Her: Peli ar hap'
-- title: Laser!
-- title: 'Her: Mwy o rwystrau'
-- title: "Her: Gwella'r disgyrchiant"
-- title: 'Her: Mwy o fywydau'
+description: Creu gêm blatfform lle rydych chi'n osgoi peli sy'n symud i gyrraedd diwedd y lefel
+version: 4.0.0
+last_tested: 2018-10-10
+steps:
+  - title: Cyflwyniad
+  - title: Symudiad y cymeriad
+  - title: "Her: cwblhau'r lefel"
+    challenge: true
+  - title: Disgyrchiant a neidio
+  - title: 'Her: gwella''r neidio'
+    challenge: true
+  - title: Osgoi peli
+  - title: 'Her: peli ar hap'
+    challenge: true
+  - title: Laser!
+  - title: 'Her: mwy o rwystrau'
+    challenge: true
+  - title: 'Her: gwell disgyrchiant'
+    challenge: true
+  - title: 'Her: mwy o fywydau'
+    challenge: true
+  - title: Beth nesaf?
