--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -1,30 +1,28 @@
 ---
 hero_image: images/banner.png
-theme: yellow
-duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
-title: Treffball
-description: In diesem Projekt lernst Du, wie Du ein Plattform-Spiel erstellst, in dem Du sich bewegenden Bällen ausweichen und das Ende des Levels erreichen musst.
-original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
-steps: 
-- title: Einführung
-- title: Bewegung der Spielfigur
-- title: 'Herausforderung: Das Level abschließen'
-- title: Schwerkraft und springen
-- title: 'Herausforderung: Vernessertes Springen'
-- title: Springende Bälle
-- title: 'Herqusforderung: Willkürliche Bälle'
-- title: Laser!
-- title: 'Herausforderung: Mehr Hindernisse'
-- title: 'Herausforderung: Verbesserte Schwerkraft'
-- title: 'Herausforderung: Mehr Leben'
+title: Völkerball
+description: Erstelle ein Plattform-Spiel, in dem du bewegenden Bällen ausweichen und das Ende des Levels erreichen musst
+version: 4.0.0
+last_tested: 2018-10-10
+steps:
+  - title: Einleitung
+  - title: Bewegung der Spielfigur
+  - title: "Herausforderung: Das Level abschließen"
+    challenge: true
+  - title: Schwerkraft und springen
+  - title: 'Herausforderung: Verbessertes Springen'
+    challenge: true
+  - title: Bällen ausweichen
+  - title: 'Herausforderung: zufällige Bälle'
+    challenge: true
+  - title: Laser!
+  - title: 'Herausforderung: Mehr Hindernisse'
+    challenge: true
+  - title: 'Herausforderung: Verbesserte Schwerkraft'
+    challenge: true
+  - title: 'Herausforderung: Mehr Leben'
+    challenge: true
+  - title: Wie geht es weiter?
