--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -13,7 +13,7 @@ steps:
   - title: "Δοκιμασία: ολοκλήρωση του επιπέδου"
     challenge: true
   - title: Βαρύτητα και άλματα
-  - title: 'Δοκιμασία: βελτιωμένα άλματα'
+  - title: 'Δοκιμασία: καλύτερα άλματα'
     challenge: true
   - title: Αποφεύγοντας τις μπάλες
   - title: 'Δοκιμασία: τυχαίες μπάλες'
