--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -1,30 +1,28 @@
 ---
 hero_image: images/banner.png
-theme: yellow
-duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
-title: Alón Prisionero
-description: Crea un juego de plataforma en el que tengas que esquivar pelotas y llegar al final del nivel.
-original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
-steps: 
-- title: Introducción
-- title: Movimientos del personaje
-- title: 'Reto: Acabar el nivel'
-- title: Gravedad y saltos
-- title: 'Reto: Salto mejorado'
-- title: Esquivar los balones
-- title: 'Reto: Balones aleatorios'
-- title: ¡Láseres!
-- title: 'Reto: Más obstáculos'
-- title: 'Reto: Gravedad mejorada'
-- title: 'Reto: Más vidas'
+title: Esquiva-pelotas
+description: Crea un juego de plataformas en el que tengas que esquivar pelotas y llegar al final del nivel
+version: 4.0.0
+last_tested: 2018-10-10
+steps:
+  - title: Introducción
+  - title: Movimientos del personaje
+  - title: "Desafío: Acabar el nivel"
+    challenge: true
+  - title: Gravedad y saltos
+  - title: 'Desafío: Mejores saltos'
+    challenge: true
+  - title: Esquivando las pelotas
+  - title: 'Desafío: Pelotas aleatorias'
+    challenge: true
+  - title: '¡Láseres!'
+  - title: 'Desafío: Más obstáculos'
+    challenge: true
+  - title: 'Desafío: Mejorando la gravedad'
+    challenge: true
+  - title: 'Desafío: Más vidas'
+    challenge: true
+  - title: ¿Qué sigue?
