--- a/kn-IN/meta.yml
+++ b/kn-IN/meta.yml
@@ -19,7 +19,7 @@ steps:
   - title: 'ಸವಾಲು: random ಚೆಂಡುಗಳು'
     challenge: true
   - title: ಲೇಸರ್ಗಳು(lasers)!
-  - title: 'ಹೆಚ್ಚು ಅಡೆತಡೆಗಳು'
+  - title: 'ಸವಾಲು: ಹೆಚ್ಚು ಅಡೆತಡೆಗಳು'
     challenge: true
   - title: 'ಸವಾಲು: ಸುಧಾರಿತ ಗುರುತ್ವಾಕರ್ಷಣೆ'
     challenge: true
