--- a/da-DK/meta.yml
+++ b/da-DK/meta.yml
@@ -1,20 +1,27 @@
----
 hero_image: images/banner.png
-theme: yellow
-duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
-title: Høvdingebold
-description: I dette projekt skal du lære, hvordan du laver et platformsspil, hvor du skal undgå at blive ramt af boldene og nå til slutningen af niveauet.
-original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
-steps: 
-- title: Høvdingebold
+title: Boldundvigelsesspil
+description: Lav et platformspil hvor du undviger rullende bolde, og hvor du skal nå slutzonen.
+version: 4.0.0
+last_tested: 2018-10-10
+steps:
+- title: Introduktion
+- title: Figur Bevægelse
+- title: "Udfordring: afslutning af niveauet"
+  challenge: true
+- title: Tyngdekraft og at hoppe
+- title: 'Udfordring: bedre hop'
+  challenge: true
+- title: Dodging balls
+- title: 'Udfordring: tilfældige bolde'
+  challenge: true
+- title: Lasere!
+- title: 'Udfordring: flere forhindringer'
+  challenge: true
+- title: 'Udfordring: forbedret tyngdekraft'
+  challenge: true
+- title: 'Udfordring: flere liv'
+  challenge: true
+- title: Hvad er det næste?
