--- a/da-DK/meta.yml
+++ b/da-DK/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Høvdingebold
-description: I dette projekt skal du lære, hvordan du laver et platformsspil, hvor du skal undgå at blive ramt af boldene og nå til slutningen af niveauet.
+description: I dette projekt skal du lære, hvordan du laver et platformsspil, hvor
+  du skal undgå at blive ramt af boldene og nå til slutningen af niveauet.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
@@ -16,5 +17,6 @@ hardware: ''
 software: scratch
 version: 3
 last_tested: 2017-01-01
-steps: 
+steps:
 - title: Høvdingebold
+  completion: engaged
