--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -4,25 +4,28 @@ listed: true
 ingredient: false
 copyedit: false
 title: Dodgeball (Τα μήλα)
-description: Δημιούργησε ένα παιχνίδι στο οποίο αποφεύγεις κινούμενες μπάλες για να φτάσεις στο τέλος του επιπέδου
+description: Δημιούργησε ένα παιχνίδι στο οποίο αποφεύγεις κινούμενες μπάλες για να
+  φτάσεις στο τέλος του επιπέδου
 version: 4.0.0
 last_tested: 2018-10-10
 steps:
-  - title: Εισαγωγή
-  - title: Κινηση χαρακτήρων
-  - title: "Δοκιμασία: ολοκλήρωση του επιπέδου"
-    challenge: true
-  - title: Βαρύτητα και άλματα
-  - title: 'Δοκιμασία: καλύτερα άλματα'
-    challenge: true
-  - title: Αποφεύγοντας τις μπάλες
-  - title: 'Δοκιμασία: τυχαίες μπάλες'
-    challenge: true
-  - title: Λέιζερ!
-  - title: 'Δοκιμασία: περισσότερα εμπόδια'
-    challenge: true
-  - title: 'Δοκιμασία: βελτιωμένη βαρύτητα'
-    challenge: true
-  - title: 'Δοκιμασία: περισσότερες ζωές'
-    challenge: true
-  - title: Και τώρα τι;
+- title: Εισαγωγή
+  completion: engaged
+- title: Κινηση χαρακτήρων
+- title: 'Δοκιμασία: ολοκλήρωση του επιπέδου'
+  challenge: true
+- title: Βαρύτητα και άλματα
+- title: 'Δοκιμασία: καλύτερα άλματα'
+  challenge: true
+- title: Αποφεύγοντας τις μπάλες
+- title: 'Δοκιμασία: τυχαίες μπάλες'
+  challenge: true
+  completion: internal
+- title: Λέιζερ!
+- title: 'Δοκιμασία: περισσότερα εμπόδια'
+  challenge: true
+- title: 'Δοκιμασία: βελτιωμένη βαρύτητα'
+  challenge: true
+- title: 'Δοκιμασία: περισσότερες ζωές'
+  challenge: true
+- title: Και τώρα τι;
