--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,15 +1,18 @@
+---
 hero_image: images/banner.png
 listed: true
 ingredient: false
 copyedit: false
 title: Dodgeball
-description: Create a platform game in which you dodge moving balls to reach the end of the level
+description: Create a platform game in which you dodge moving balls to reach the end
+  of the level
 version: 4.0.0
 last_tested: 2018-10-10
-steps: 
+steps:
 - title: Introduction
+  completion: engaged
 - title: Character movement
-- title: "Challenge: completing the level"
+- title: 'Challenge: completing the level'
   challenge: true
 - title: Gravity and jumping
 - title: 'Challenge: improved jumping'
@@ -17,6 +20,7 @@ steps:
 - title: Dodging balls
 - title: 'Challenge: random balls'
   challenge: true
+  completion: internal
 - title: Lasers!
 - title: 'Challenge: more obstacles'
   challenge: true
