--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -4,25 +4,28 @@ listed: true
 ingredient: false
 copyedit: false
 title: Esquiva-pelotas
-description: Crea un juego de plataformas en el que tengas que esquivar pelotas y llegar al final del nivel
+description: Crea un juego de plataformas en el que tengas que esquivar pelotas y
+  llegar al final del nivel
 version: 4.0.0
 last_tested: 2018-10-10
 steps:
-  - title: Introducción
-  - title: Movimientos del personaje
-  - title: "Desafío: acabar el nivel"
-    challenge: true
-  - title: Gravedad y saltos
-  - title: 'Desafío: mejores saltos'
-    challenge: true
-  - title: Esquivando las pelotas
-  - title: 'Desafío: pelotas aleatorias'
-    challenge: true
-  - title: '¡Láseres!'
-  - title: 'Desafío: más obstáculos'
-    challenge: true
-  - title: 'Desafío: mejorando la gravedad'
-    challenge: true
-  - title: 'Desafío: más vidas'
-    challenge: true
-  - title: ¿Qué sigue?
+- title: Introducción
+  completion: engaged
+- title: Movimientos del personaje
+- title: 'Desafío: acabar el nivel'
+  challenge: true
+- title: Gravedad y saltos
+- title: 'Desafío: mejores saltos'
+  challenge: true
+- title: Esquivando las pelotas
+- title: 'Desafío: pelotas aleatorias'
+  challenge: true
+  completion: internal
+- title: "¡Láseres!"
+- title: 'Desafío: más obstáculos'
+  challenge: true
+- title: 'Desafío: mejorando la gravedad'
+  challenge: true
+- title: 'Desafío: más vidas'
+  challenge: true
+- title: "¿Qué sigue?"
