--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -4,25 +4,28 @@ listed: true
 ingredient: false
 copyedit: false
 title: डॉजबॉल
-description: प्लेटफॉर्म गेम बनाएँ, जिसमे आपको हिलती गेंदों को पार करके अगले लेवल के अंत तक पहुँचना हो।
+description: प्लेटफॉर्म गेम बनाएँ, जिसमे आपको हिलती गेंदों को पार करके अगले लेवल के
+  अंत तक पहुँचना हो।
 version: 4.0.0
 last_tested: 2018-10-10
 steps:
-  - title: भूमिका
-  - title: पात्र की गति
-  - title: "चुनौती: लेवल पूरा करना"
-    challenge: true
-  - title: गुरुत्वाकर्षण और छलांग
-  - title: 'चुनौती: छलांग में सुधार'
-    challenge: true
-  - title: गेंदों को चकमा देना
-  - title: 'चुनौती: यादृच्छिक गेंदें'
-    challenge: true
-  - title: लेज़र!
-  - title: 'चुनौती: अधिक बाधाएँ'
-    challenge: true
-  - title: 'चुनौती: गुरुत्वाकर्षण में सुधार'
-    challenge: true
-  - title: 'चुनौती: अधिक जीवन'
-    challenge: true
-  - title: आगे क्या?
+- title: भूमिका
+  completion: engaged
+- title: पात्र की गति
+- title: 'चुनौती: लेवल पूरा करना'
+  challenge: true
+- title: गुरुत्वाकर्षण और छलांग
+- title: 'चुनौती: छलांग में सुधार'
+  challenge: true
+- title: गेंदों को चकमा देना
+- title: 'चुनौती: यादृच्छिक गेंदें'
+  challenge: true
+  completion: internal
+- title: लेज़र!
+- title: 'चुनौती: अधिक बाधाएँ'
+  challenge: true
+- title: 'चुनौती: गुरुत्वाकर्षण में सुधार'
+  challenge: true
+- title: 'चुनौती: अधिक जीवन'
+  challenge: true
+- title: आगे क्या?
