--- a/hr-HR/meta.yml
+++ b/hr-HR/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Preskakanje lopti
-description: U ovom projektu ćeš naučiti napraviti igru u kojoj igrač treba izbjegavati lopte koje se kreću i stići do kraja nivoa.
+description: U ovom projektu ćeš naučiti napraviti igru u kojoj igrač treba izbjegavati
+  lopte koje se kreću i stići do kraja nivoa.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
@@ -16,5 +17,6 @@ hardware: ''
 software: scratch
 version: 3
 last_tested: 2017-01-01
-steps: 
+steps:
 - title: Preskakanje lopti
+  completion: engaged
