--- a/it-IT/meta.yml
+++ b/it-IT/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Dodgeball
-description: Crea un gioco a piattaforme in cui dovrai schivare le palle in movimento e raggiungere la fine del livello.
+description: Crea un gioco a piattaforme in cui dovrai schivare le palle in movimento
+  e raggiungere la fine del livello.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
@@ -16,14 +17,16 @@ hardware: ''
 software: scratch
 version: 3
 last_tested: 2017-01-01
-steps: 
+steps:
 - title: Introduzione
+  completion: engaged
 - title: Movimento del personaggio
 - title: 'Sfida: Completare il livello'
 - title: Gravità e salti
 - title: 'Sfida: Salto migliorato'
 - title: Palle da schivare
 - title: 'Sfida: Palle a caso'
+  completion: internal
 - title: Laser!
 - title: 'Sfida: Altri ostacoli'
 - title: 'Sfida: Salto migliorato'
