--- a/me-ME/meta.yml
+++ b/me-ME/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Između dvije vatre
-description: Kreiraj platformsku igru u kojoj treba da izbjegavaš lopte koje se kreću i dođeš do kraja nivoa.
+description: Kreiraj platformsku igru u kojoj treba da izbjegavaš lopte koje se kreću
+  i dođeš do kraja nivoa.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
@@ -17,14 +18,16 @@ software: scratch
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: Uvod
-  - title: Kretanje karaktera
-  - title: 'Izazov: Dovršavanje nivoa'
-  - title: Gravitacija i skokovi
-  - title: 'Izazov: Poboljšan skok'
-  - title: Izbjegavanje lopti
-  - title: 'Izazov: Slučajne lopte'
-  - title: Laseri!
-  - title: 'Izazov: Više prepreka'
-  - title: 'Izazov: Poboljšana gravitacija'
-  - title: 'Izazov: Više života'
+- title: Uvod
+  completion: engaged
+- title: Kretanje karaktera
+- title: 'Izazov: Dovršavanje nivoa'
+- title: Gravitacija i skokovi
+- title: 'Izazov: Poboljšan skok'
+- title: Izbjegavanje lopti
+- title: 'Izazov: Slučajne lopte'
+  completion: internal
+- title: Laseri!
+- title: 'Izazov: Više prepreka'
+- title: 'Izazov: Poboljšana gravitacija'
+- title: 'Izazov: Više života'
