--- a/uk-UA/meta.yml
+++ b/uk-UA/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Викидайли
-description: В цьому проекті ви дізнаєтеся, як створити гру-платформер, в якій потрібно буде дістатися кінця рівня ухиляючись від рухомих куль.
+description: В цьому проекті ви дізнаєтеся, як створити гру-платформер, в якій потрібно
+  буде дістатися кінця рівня ухиляючись від рухомих куль.
 original_url: https://codeclubprojects.org/en-GB/scratch/dodgeball
 interests: games
 technologies: scratch
@@ -16,5 +17,6 @@ hardware: ''
 software: scratch
 version: 3
 last_tested: 2017-01-01
-steps: 
+steps:
 - title: Викидайли
+  completion: engaged
