--- a/mr-IN/meta.yml
+++ b/mr-IN/meta.yml
@@ -10,18 +10,20 @@ version: 4.0.0
 last_tested: 2018-10-10
 steps:
 - title: परिचय
-  completion: engaged
 - title: पात्राची हालचाल
 - title: 'आव्हान: स्तर पूर्ण करणे'
   challenge: true
 - title: गुरुत्वाकर्षण आणि उडी मारणे
+  completion:
+  - engaged
 - title: 'आव्हान: उडी सुधारणे'
   challenge: true
 - title: चेंडुंना चकवा देणे
 - title: 'आव्हान: अनियत चेंडू'
   challenge: true
-  completion: internal
 - title: लेझर!
+  completion:
+  - internal
 - title: 'आव्हान: अधिक अडथळे'
   challenge: true
 - title: 'आव्हान: सुधारित गुरुत्वाकर्षण'
