--- a/zh-CN/meta.yml
+++ b/zh-CN/meta.yml
@@ -9,18 +9,20 @@ version: 4.0.0
 last_tested: 2018-10-10
 steps:
 - title: 介绍
-  completion: engaged
 - title: 角色移动
 - title: 挑战：通关
   challenge: true
 - title: 重力和跳跃
+  completion:
+  - engaged
 - title: 挑战：改进跳跃体验
   challenge: true
 - title: 躲避球
 - title: 挑战：随机生成小球
   challenge: true
-  completion: internal
 - title: 激光！
+  completion:
+  - internal
 - title: 挑战：更多的障碍
   challenge: true
 - title: 挑战：改进重力体验
